Class.newInstance with getDeclaredConstructor().newInstance